docs: add video link

--- a/Technical_Challenge_Part_2.ipynb
+++ b/Technical_Challenge_Part_2.ipynb
@@ -11,7 +11,7 @@
         "q7NPkLTa-HvJ"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMSbqydkLL9x0M6XtICXMgS",
+      "authorship_tag": "ABX9TyMWLfe+EWZRbDtsO1ISLq+g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2568,35 +2568,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "UEKqnFT0tBlv"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "QGMpgGkZn1B8"
       },
       "source": [
         "# Resources\n",
+        "* VIDEO FOR THIS CHALLENGE: https://youtu.be/bVFRHpaaRjs\n",
         "* https://blog.datasyndrome.com/python-and-parquet-performance-e71da65269ce\n",
         "* https://towardsdatascience.com/pyspark-and-sparksql-basics-6cb4bf967e53\n",
         "* https://sparkbyexamples.com/pyspark/pyspark-read-and-write-parquet-file/\n",
         "* https://towardsdatascience.com/pyspark-and-sparksql-basics-6cb4bf967e53\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TjbSDWA0nowN"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 69,
-      "outputs": []
     }
   ]
 }
